--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,10 +4,6 @@
   margin: 0;
   padding: 0;
 }
-body{
-  background-color: #333;
-}
-
 
 /*NAV*/
 nav{
@@ -20,7 +16,7 @@ nav > li{
 }
 nav > li > a{
   text-decoration: none;
-  color: white;
+  color: black;
 }
 
 
