replaced old code with function

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,10 @@
   border-bottom: 1px solid black;
 }
 
+.voteForm .btn{
+  width: 38px;
+}
+
 /* GENERAL
 body{
   background-color: var(--bg-color);
