--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,18 @@
   width: 38px;
 }
 
+.edit-profile-image{
+  height: 200px;
+}
+
+div[class*='profile'] > .panel{
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-top: 25px;
+  background-color: #f5f5f5;
+  padding: 10px 20px;
+}
+
 /* GENERAL
 body{
   background-color: var(--bg-color);
