--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,32 +14,36 @@
   display: none;
 }
 
-[class*="bg"]{ /*Adds rounded corners on bootstrap warnings/danger bg etc*/
+.formError{ /*Adds rounded corners on bootstrap warnings/danger bg etc*/
   border-radius: 4px;
 }
 
-.post, .row > .vote{ /*Adds border below each post in postList and on single post*/
-  border-bottom: 1px solid black;
+/*Post page voteform*/
+.verticalAlign{
+  display: flex;
+  align-items: center;
+}
+.vote{
+  line-height: 10px;
 }
 
-.voteForm .btn{
-  width: 38px;
-}
-
-.edit-profile-image{
-  height: 200px;
-}
-
-/*PROFILE EDIT PAGE*/
-div[class*='profile'] > .panel{
+/*Profile page*/
+.panel{
   border: 1px solid #ddd;
   border-radius: 4px;
-  margin-top: 25px;
   background-color: #f5f5f5;
   padding: 10px 20px;
 }
-div[class*='profile'] input,
-div[class*='profile'] button,
-div[class*='profile'] [class*="bg"]{ /*Spacing for profile forms*/
+input, button, .formError{ /*Spacing for profile forms*/
   margin-top: 10px;
+}
+
+
+
+/*NAVBAR*/
+.navbar .navbar-gray{
+  color: rgba(255,255,255,.5);
+}
+.navbar .navbar-white{
+  color: #fff;
 }
