--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,31 +1,89 @@
+/*GENERAL*/
 *{
   font-family: 'Roboto Light', Arial, sans-serif;
 }
-
-/*VARIABLES*/
-:root {
-  --bg-color: #192231;
-  --bg-color2: #494E6B;
-  --highlight-color: #985E6D;
-  --highligt-damp: #98878F;
-}
-
 .hidden{ /*Used with javascript to hide elements*/
   display: none;
 }
 
-.formError{ /*Adds rounded corners on bootstrap warnings/danger bg etc*/
-  border-radius: 4px;
+/*NAVBAR*/
+.dropdown-menu.bg-dark > a{
+  color: rgba(255,255,255,.5);
+}
+.dropdown-menu.bg-dark > a.selected{
+  color: #fff;
+}
+.dropdown-menu.bg-dark > a:hover{
+  background-color: #007bff;
+  color: white;
 }
 
-/*Post page voteform*/
-.verticalAlign{
+/*STARTPAGE/POSTLIST*/
+.container > .posts{
   display: flex;
-  align-items: center;
+  flex-flow: column nowrap;
 }
-.vote{
-  line-height: 10px;
+.post{
+  display: flex;
+  flex-flow: row nowrap;
+
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #f5f5f5;
 }
+.scoreContainer{
+  display: flex;
+  flex-grow: 1;
+  align-self: center;
+  margin-right: 15px;
+}
+.scoreForm{
+  display: flex;
+  flex-flow: column wrap;
+}
+.scoreForm > .postScore{
+  text-align: center;
+}
+.postDetailContainer{
+  flex-grow: 35;
+  align-self: center;
+}
+.post .u_vote.active, .post .u_vote:hover{
+  background-color: #51c676;
+}
+.post .d_vote.active, .post .d_vote:hover{
+  background-color: tomato;
+}
+.post .btn{
+  margin: 0;
+}
+
+/*POSTPAGE*/
+.comments .comment{
+  display: flex;
+  flex-flow: column nowrap;
+
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  padding: 10px;
+  background-color: #f5f5f5;
+}
+
+/*AVATAR*/
+.rounded{
+  max-height: 175px;
+}
+
+
+
+
+
+
+
+
 
 /*Profile page*/
 .panel{
@@ -36,17 +94,4 @@
 }
 input, button, .formError{ /*Spacing for profile forms*/
   margin-top: 10px;
-}
-[class*="profile"] img{
-  /* max-height: 200px; */
-}
-
-
-
-/*NAVBAR*/
-.navbar .navbar-gray{
-  color: rgba(255,255,255,.5);
-}
-.navbar .navbar-white{
-  color: #fff;
 }
